# screenout

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: release.md
docs/plans/: 2026-06-17-public-remote-rescue-design.md  2026-06-17-ssh-handoff-implementation.md  2026-06-21-launch-and-agent-handoff-design.md  2026-06-21-launch-and-agent-handoff.md
examples/: remote-rescue-demo.sh
src/: lib.rs  main.rs
tests/: cli.rs  clipboard.rs  dependencies.rs  planning.rs  sessions.rs
