[package]
name = "screenout"
version = "0.1.0"
edition = "2021"
description = "Rescue a stopped terminal job into tmux and print a handoff command for humans or agents."
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/screenout"
keywords = ["tmux", "ssh", "cli", "terminal", "agent"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "Cargo.toml",
    "Cargo.lock",
    "LICENSE",
    "README.md",
    "examples/**",
    "src/**",
    "tests/**",
]

[lib]
name = "screenout"
path = "src/lib.rs"

[[bin]]
name = "screenout"
path = "src/main.rs"
